added more design

--- a/web/web-layout/index.html
+++ b/web/web-layout/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="img/jpg" href="img/Poke_Ball.webp">
     <title>Web Layout</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     
@@ -22,5 +23,65 @@
     <article> = independent content 
     <footer>  = closing content 
 -->
+
+
+    <header>
+        <h2>Header</h2>
+    </header>
+
+    <nav class="navbar"></nav>
+
+    <main>
+        <aside>
+            <h2>This is aside</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam facilis, earum amet sunt saepe incidunt porro quam iste, inventore cum vero cupiditate minima hic itaque nobis harum eius asperiores delectus?</p>
+        </aside>
+
+        <section>
+            <h2>This is section </h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia ducimus non cum rerum amet quod eum provident, earum delectus sunt iste dolores minima et neque maiores hic blanditiis autem ab?</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque cum quod dolorum, porro blanditiis, architecto soluta iusto aliquam sequi nam natus vero culpa a facilis necessitatibus nulla maiores labore voluptates?</p>
+        </section>
+
+        <article>
+            <h2>This is article</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt nostrum corporis tempore assumenda aliquid asperiores excepturi, illum saepe vitae maxime iste sint atque? Sunt commodi nemo, ut soluta autem quibusdam.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam quas ut voluptatum repellat qui sapiente dolor, libero unde ratione cum saepe non laudantium beatae debitis suscipit facilis totam reprehenderit nostrum.</p>
+        </article>
+
+        <br>
+
+        <div class="gallery-container">
+            <div class="gallery">
+                <a href="img/square5.jpg" target="_blank">
+                    <img src="img/square5.jpg" alt="" width="200px">
+                </a>
+                <div class="description">Jungle</div>
+            </div>
+            <div class="gallery">
+                <a href="img/square4.jpg" target="_blank">
+                    <img src="img/square4.jpg" alt="" width="200px">
+                </a>
+                <div class="description">Sea</div>
+            </div>
+            <div class="gallery">
+                <a href="img/square.jpg" target="_blank">
+                    <img src="img/square.jpg" alt="" width="200px">
+                </a>
+                <div class="description">Book</div>
+            </div>
+            <div class="gallery">
+                <a href="img/square2.jpg" target="_blank">
+                    <img src="img/square2.jpg" alt="" width="200px">
+                </a>
+                <div class="description">Ring</div>
+            </div>
+        </div>
+    </main>
+
+    <footer>
+        <h2>Footer</h2>
+    </footer>
+
 </body>
 </html>
